[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui/ClickParticle.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemies/EnemyManager.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/OneEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/ui/bar.png" type="Texture" id=4]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UpgradeRunner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemies/TenEnemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemies/FiveEnemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/enemies/TwentyEnemy.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/ShopMenu.tscn" type="PackedScene" id=11]

[node name="Node2D" type="Node2D"]

[node name="bar" type="Sprite" parent="."]
modulate = Color( 0.156863, 0.294118, 0.388235, 1 )
position = Vector2( 263.323, 558.201 )
rotation = 3.14159
scale = Vector2( 80.5295, 80.5295 )
z_index = -2
texture = ExtResource( 4 )

[node name="Map" parent="." instance=ExtResource( 5 )]
position = Vector2( 74.3353, 47.877 )
scale = Vector2( 0.851159, 0.851159 )

[node name="ShopMenu" parent="." instance=ExtResource( 11 )]
visible = false
anchor_bottom = 0.0
margin_left = 38.0547
margin_top = 34.487
margin_right = 1318.05
margin_bottom = 754.487
rect_scale = Vector2( 0.92257, 0.92257 )

[node name="GUI" parent="." instance=ExtResource( 7 )]
pause_mode = 2
margin_right = 1080.0
margin_bottom = 79.0
invalidColor = Color( 0.8, 0.0745098, 0.0745098, 1 )
validColor = Color( 0.223529, 0.662745, 0.0823529, 1 )

[node name="TextureButton" parent="GUI/ShopContainer/ShopButton" index="0"]
margin_left = -11.8375
margin_top = -13.1173
margin_right = 52.1625
margin_bottom = 50.8827
rect_scale = Vector2( 1.18033, 1.18033 )

[node name="EnemyManager" type="Node2D" parent="."]
script = ExtResource( 2 )
particleToSpawn = ExtResource( 1 )
enemy_array = [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ]

[node name="WaveTimer" type="Timer" parent="EnemyManager"]
pause_mode = 1
wait_time = 1.5

[node name="EnemySpawnTimer" type="Timer" parent="EnemyManager"]

[node name="UpgradeRunner" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, 0 )
[connection signal="timeout" from="EnemyManager/WaveTimer" to="EnemyManager" method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="EnemyManager/EnemySpawnTimer" to="EnemyManager" method="spawn_enemy"]

[editable path="GUI"]
